...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <ProgressBar
                android:id="@+id/circular_progress_budget"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:progress="65"
                android:progressDrawable="@drawable/circular_progress_drawable"
                app:layout_constraintTop_toTopOf="parent"
...
